[package]
name = "tool"
version = "0.1.5"
authors = ["Steven Allen <steven@stebalien.com>", "bluss"]
description = "A grab-bag of tools for functional programming."

documentation = "https://stebalien.github.io/tool-rs/tool/"
repository = "https://github.com/Stebalien/tool-rs/"
license = "MIT/Apache-2.0"
keywords = ["functional"]

[features]
use_std = []
unstable = []
default = ["use_std"]
