[package]
name = "tool"
version = "0.2.1"
authors = ["Steven Allen <steven@stebalien.com>", "bluss"]
description = "A grab-bag of tools for functional programming."

documentation = "https://docs.rs/tool/"
repository = "https://github.com/Stebalien/tool-rs/"
license = "MIT/Apache-2.0"
keywords = ["functional"]

[features]
use_std = []
unstable = [] # Unused
default = ["use_std"]
